--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,7 @@ Temporary Items
 .env.development.local
 .env.test.local
 .env.production.local
+
+### Ignore keys
+/config/dev.js
+/config/prod.js
