--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple personal invoicing",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
