--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.3.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "path-parser": "^4.2.0"
   },
   "devDependencies": {
