--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Simple personal invoicing",
   "private": true,
   "scripts": {
+    "client": "npm run start --prefix client",
     "test": "node_modules/mocha/bin/mocha --exit ./test/*.test.js",
-    "server": "nodemon app.js"
+    "server": "nodemon app.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "http-proxy-middleware": "^0.19.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.3.12",
     "passport": "^0.4.0",
